# obsclip

./: README.md  annotation.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/screenshots/: settings-mockup.html  tray-mockup.html
docs/superpowers/plans/: 2026-06-29-obsclip.md  2026-07-01-one-line-install.md  2026-07-01-settings-auto-save.md
docs/superpowers/specs/: 2026-06-29-obsclip-design.md  2026-07-01-one-line-install-design.md  2026-07-01-settings-auto-save-design.md
scripts/: install.ps1  install.sh
src/: annotation.css  annotation.ts  main.ts  shortcut.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: annotation.rs  config.rs  lib.rs  macos_prelaunch.rs  main.rs  platform.rs  tray.rs  tray_icons.rs
src-tauri/src/clip/: formatter.rs  image.rs  mod.rs  service.rs
src-tauri/src/clipboard/: mod.rs  reader.rs
src-tauri/src/vault/: daily_note.rs  date_format.rs  mod.rs  obsidian.rs  resolver.rs  template.rs
src-tauri/tests/: clip_service.rs  daily_note.rs  date_format.rs  formatter.rs  image.rs  live_clip.rs  obsidian_config.rs  platform.rs  vault_resolver.rs
src-tauri/tests/fixtures/: obsidian-open-only.json  obsidian.json
src-tauri/tests/fixtures/vault/.obsidian/: app.json  daily-notes.json
