[package]
name = "obsclip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "obsclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
arboard = "3"
image = "0.25"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"

[[test]]
name = "platform"
path = "tests/platform.rs"

[[test]]
name = "vault_resolver"
path = "tests/vault_resolver.rs"

[[test]]
name = "obsidian_config"
path = "tests/obsidian_config.rs"

[[test]]
name = "date_format"
path = "tests/date_format.rs"

[[test]]
name = "daily_note"
path = "tests/daily_note.rs"

[[test]]
name = "formatter"
path = "tests/formatter.rs"

[[test]]
name = "image"
path = "tests/image.rs"
